# Codex-Hackathon---Testing-in-Prod

./: .dockerignore  .gitignore  README.md  api_usage.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_ocr.py
.agents/skills/web-dev-rules/: SKILL.md
ai/: __init__.py  preprocessor.py  prompts.py  vlm_client.py  workflow.py
backend/: route.py
backend/routers/: __init__.py  auth_router.py  ocr_router.py
backend/routers.py/: __init__.py  auth_router.py
backend/services/: auth.py  ocr.py
codex_backend/: .env.example  Dockerfile  api_usage.md  pyproject.toml  requirements.txt  route.py  run_ocr.py  test_auth_live.py  test_cli_ocr_endpoint.py  test_dashboard_cache.py  test_mistral_fallback.py  test_ocr_gridfs_live.py  test_run_ocr.py
codex_backend/ai/: __init__.py  prompts.py  vlm_client.py  workflow.py
codex_backend/backend/: route.py
codex_backend/backend/routers/: __init__.py  auth_router.py  ocr_router.py
codex_backend/backend/services/: ocr.py
codex_backend/db/: __init__.py  db_init.py  mongo_ocr.py
codex_backend/routers/: __init__.py  auth_router.py  ocr_router.py
codex_backend/services/: auth.py  ocr.py
db/: __init__.py  db_init.py  mongo_db.py  mongo_ocr.py
legacy-bridge/: .dockerignore  .env.example  Dockerfile  MOCK_ACCOUNTS.md  TODO.md  next.config.mjs  package-lock.json  package.json
legacy-bridge/app/: globals.css  layout.js  page.js
legacy-bridge/app/about/: constants.js  page.jsx
legacy-bridge/app/admin/: admin.style.js  constants.js  page.jsx
legacy-bridge/app/change-password/: change-password.style.js  constants.js  page.jsx
legacy-bridge/app/dashboard/: constants.js  page.jsx
legacy-bridge/app/guest/: page.jsx
legacy-bridge/app/home/: constants.js  home.style.js  (+1 more)
legacy-bridge/constants/: index.jsx
legacy-bridge/hooks/: globalHooks.js
legacy-bridge/navigation/: routes.js
legacy-bridge/styles/: global.style.js
legacy-bridge/utils/: globalFormatter.js  globalValidator.js
(+83 files in other folders)
