[project]
name = "codex-thing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "huggingface-hub>=1.23.0",
    "opencv-python-headless>=5.0.0.93",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.13.1",
    "uvicorn>=0.51.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
