[project]
name = "codex-thing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.0",
    "motor>=3.7.1",
    "numpy>=2.0.0",
    "opencv-python-headless>=5.0.0.93",
    "passlib[bcrypt]>=1.7.4",
    "Pillow>=11.0.0",
    "pydantic>=2.0.0",
    "pymongo>=4.10.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]

